--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -46,6 +46,7 @@
                     </div>
                 </div>
             </nav>
+            <div id="contenedorClima"></div>
         </div>
     </header>
 
@@ -183,6 +184,7 @@
     <script>
         AOS.init();
     </script>
+    <script type="module" src="../script/index.js"></script>
 </body>
 
 </html>
