--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -48,6 +48,7 @@
                     </div>
                 </div>
             </nav>
+            <div id="contenedorClima"></div>
         </div>
     </header>
 
