--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -47,6 +47,7 @@
                     </div>
                 </div>
             </nav>
+            <div id="contenedorClima"></div>
         </div>
     </header>
 
@@ -181,6 +182,7 @@
     <script>
         AOS.init();
     </script>
+    <script type="module" src="../script/index.js"></script>
 </body>
 
 </html>
